--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,14 +9,16 @@ jobs:
   release:
     runs-on: ubuntu-latest
     concurrency: release
+    permissions:
+      id-token: write
+      contents: write
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN}}
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
-      - name: Python Semantic Release
-        uses: relekang/python-semantic-release@v7.34.6  
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Python Semantic Release
+      uses: python-semantic-release/python-semantic-release@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
