--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,5 +18,5 @@ jobs:
 
       - name: Python Semantic Release
         uses: relekang/python-semantic-release@v7.34.6  
-        with:
+        # with:
         #   github_token: ${{ secrets.GITHUB_TOKEN }}
