--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,9 +14,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 10
-        #   token: ${{ secrets.GITHUB_TOKEN}}
+          token: ${{ secrets.GH_TOKEN}}
 
       - name: Python Semantic Release
         uses: relekang/python-semantic-release@v7.34.6  
-        # with:
-        #   github_token: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          github_token: ${{ secrets.GH_TOKEN }}
